# docs/swagger.json
@@ -10,6 +10,35 @@
     "basePath": "/api",
     "paths": {
         "/combinations": {
+            "get": {
+                "description": "Returns a list of all combinations",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "combinations"
+                ],
+                "summary": "Get all combinations",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Element name",
+                        "name": "element",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.CombinationResponse"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Combines two elements and returns the resulting element",
                 "consumes": [
@@ -47,6 +76,38 @@
                         "description": "Invalid combination",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/combinations/result": {
+            "get": {
+                "description": "Returns a list of all combinations for a resulting element",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "combinations"
+                ],
+                "summary": "Get all combinations for a resulting element",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resulting element name",
+                        "name": "resultingElement",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.CombinationResponse"
+                            }
                         }
                     }
                 }
@@ -120,6 +181,20 @@
                 },
                 "second_element": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.CombinationResponse": {
+            "type": "object",
+            "properties": {
+                "firstElement": {
+                    "$ref": "#/definitions/models.Element"
+                },
+                "resultingElement": {
+                    "$ref": "#/definitions/models.Element"
+                },
+                "secondElement": {
+                    "$ref": "#/definitions/models.Element"
                 }
             }
         },
