# dto/combination_response.go
@@ -1,0 +1,9 @@
+package dto
+
+import "github.com/PandaX185/computer-alchemy-api/models"
+
+type CombinationResponse struct {
+	FirstElement     *models.Element
+	SecondElement    *models.Element
+	ResultingElement *models.Element
+}
